--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -6,3 +6,20 @@
 .delete-form{
 	margin-top: 16px;
 }
+
+.bg-light {
+	max-width: 100% !important;
+}
+
+.post-edit-btn {
+	float: left;
+}
+
+.delete-form {
+	float: right;
+}
+
+.show-bloas-container {
+	max-width: 600px;
+	margin-left: 30px;
+}
